--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-nodeunit": "~0.3.1",
     "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-csslint": "~0.2.0"
+    "grunt-contrib-csslint": "~0.2.0",
+    "express": "~3.4.8",
+    "ejs": "~0.8.5",
+    "connect": "~2.13.0",
+    "load-grunt-tasks": "~0.3.0",
+    "time-grunt": "~0.2.9"
   }
 }
