--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "~0.8.5",
     "connect": "~2.13.0",
     "load-grunt-tasks": "~0.3.0",
-    "time-grunt": "~0.2.9"
+    "time-grunt": "~0.2.9",
+    "consolidate": "~0.10.0"
   }
 }
