--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-facebook": "~1.0.3",
     "passport-twitter": "~1.0.2",
     "passport-github": "~0.1.5",
-    "passport-google": "~0.3.0"
+    "passport-google": "~0.3.0",
+    "mongoose": "~3.8.8"
   }
 }
