--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "passport-twitter": "~1.0.2",
     "passport-github": "~0.1.5",
     "passport-google": "~0.3.0",
-    "mongoose": "~3.8.8"
+    "mongoose": "~3.8.8",
+    "passport-local": "~1.0.0",
+    "passport-qq": "0.0.3"
   }
 }
