--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "~3.8.8",
     "passport-local": "~1.0.0",
     "passport-qq": "0.0.3",
-    "imagemagick": "~0.1.3"
+    "imagemagick": "~0.1.3",
+    "formidable": "~1.0.14"
   }
 }
